k8s/IngressClass.yml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: global-alb
spec:
  controller: ingress.k8s.aws/alb
