k8s/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: global-ingress
  namespace: taf
  labels:
    name: global-ingress
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  ingressClassName: global-alb
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/taf"
        backend:
          service:
            name: taf-frontend-service
            port: 
              name: taf-front-http
